--- a/server/src/main/resources/password/pwm/i18n/Error_en_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_en_CA.properties
@@ -159,8 +159,13 @@ Error_EnvironmentError=An error with the application environment has prevented t
 Error_ApplicationNotRunning=This functionality is not available until the application configuration is restricted.
 Error_EmailSendFailure=Error sending email item %1%, error: %2%
 Error_PasswordOnlyBad=Password incorrect. Please try again.
-
+Error_RecoverySequenceIncomplete=A problem occurred during the forgotten password sequence. Please try again.
+Error_FileTypeIncorrect=The file type is not correct.
+Error_FileTooLarge=The file is too large.
+Error_ClusterServiceError=An error occurred with the cluster service: %1%.   Check the log files for more information.
 Error_RemoteErrorValue=Remote Error: %1%
+Error_WordlistImportError=An error occurred while importing the wordlist: %1%
+Error_PwNotifyServiceError=An error occurred while running the password notify service: %1%
 
 Error_ConfigUploadSuccess=File uploaded successfully
 Error_ConfigUploadFailure=File failed to upload.
