--- a/server/src/main/resources/password/pwm/i18n/Message_ca.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_ca.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=El nou compte de convidat s'ha creat correctament. L'usuari 
 Success_CreateUser=El nou compte d'usuari s'ha creat correctament.
 Success_NewUserForm=Tot est\u00e0 llest per crear el compte. Continu\u00ef quan estigui preparat.
 Success_PasswordChange=La contrasenya s'ha canviat correctament.
-Success_ChangedHelpdeskPassword=La contrasenya de l'usuari s'ha canviat correctament 
+Success_ChangedHelpdeskPassword=La contrasenya de l'usuari %1% s'ha canviat correctament. 
 Success_PasswordReset=La contrasenya de %1% s'ha definit correctament.
 Success_PasswordSend=La contrasenya nova s'ha enviat a %1%.  Tanqui la finestra i inici\u00ef la sessi\u00f3 amb la contrasenya nova.
 Success_ResponsesMeetRules=Les respostes compleixen els requisits. Cliqui Desa les respostes quan estigui preparat.
