--- a/server/src/main/resources/password/pwm/i18n/Message_da.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_da.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=Den nye g\u00e6stekonto blev oprettet. G\u00e6stebrugeren mo
 Success_CreateUser=Din nye brugerkonto blev oprettet.
 Success_NewUserForm=Din konto er klar til at blive oprettet. Forts\u00e6t, n\u00e5r du er klar.
 Success_PasswordChange=Adgangskoden blev \u00e6ndret.
-Success_ChangedHelpdeskPassword=Adgangskoden blev \u00e6ndret for brugeren 
+Success_ChangedHelpdeskPassword=Adgangskoden blev \u00e6ndret for brugeren %1%. 
 Success_PasswordReset=Adgangskoden til %1% blev angivet.
 Success_PasswordSend=Din nye adgangskode blev sendt til %1%. Luk dette vindue, og log derefter p\u00e5 med din nye adgangskode.
 Success_ResponsesMeetRules=Dine svar overholder kravene. Klik p\u00e5 Gem svar, n\u00e5r du er klar.
