--- a/server/src/main/resources/password/pwm/i18n/Message_nl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_nl.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=De nieuwe gastaccount is gemaakt. De gastgebruiker ontvangt 
 Success_CreateUser=Uw nieuwe gebruikersaccount is gemaakt.
 Success_NewUserForm=Uw account kan worden gemaakt. Ga verder als u gereed bent.
 Success_PasswordChange=Het wachtwoord is gewijzigd.
-Success_ChangedHelpdeskPassword=Het wachtwoord voor de gebruiker is gewijzigd 
+Success_ChangedHelpdeskPassword=Het wachtwoord van de gebruiker %1% is gewijzigd. 
 Success_PasswordReset=Het wachtwoord voor %1% is ingesteld.
 Success_PasswordSend=Uw nieuwe wachtwoord is verzonden naar %1%. Sluit dit venster en gebruik het nieuwe wachtwoord om u opnieuw aan te melden.
 Success_ResponsesMeetRules=Uw antwoorden voldoen aan de vereisten. Klik op Antwoorden opslaan als u gereed bent.
