--- a/server/src/main/resources/password/pwm/i18n/Message_pl.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_pl.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=Nowe konto go\u015bcia zosta\u0142o pomy\u015blnie utworzone
 Success_CreateUser=Nowe konto u\u017cytkownika zosta\u0142o pomy\u015blnie utworzone.
 Success_NewUserForm=Konto jest gotowe do utworzenia. Mo\u017cesz kontynuowa\u0107.
 Success_PasswordChange=Has\u0142o zosta\u0142o pomy\u015blnie zmienione.
-Success_ChangedHelpdeskPassword=Has\u0142o zosta\u0142o pomy\u015blnie zmienione dla u\u017cytkownika 
+Success_ChangedHelpdeskPassword=Has\u0142o zosta\u0142o pomy\u015blnie zmienione dla u\u017cytkownika %1%. 
 Success_PasswordReset=Has\u0142o dla u\u017cytkownika %1% zosta\u0142o pomy\u015blnie ustawione.
 Success_PasswordSend=Nowe has\u0142o zosta\u0142o wys\u0142ane na adres %1%. Zamknij to okno, a nast\u0119pnie zaloguj si\u0119 za pomoc\u0105 nowego has\u0142a.
 Success_ResponsesMeetRules=Te odpowiedzi spe\u0142niaj\u0105 wymagania. Mo\u017cesz klikn\u0105\u0107 przycisk Zapisz odpowiedzi.
