--- a/server/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_pt_BR.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=A nova conta do convidado foi criada com \u00eaxito. O usu\u
 Success_CreateUser=A nova conta do usu\u00e1rio foi criada com \u00eaxito.
 Success_NewUserForm=Sua conta est\u00e1 pronta para ser criada. Continue quando estiver pronto.
 Success_PasswordChange=A senha foi mudada com \u00eaxito.
-Success_ChangedHelpdeskPassword=A senha do usu\u00e1rio foi mudada com \u00eaxito 
+Success_ChangedHelpdeskPassword=A senha foi mudada com \u00eaxito para o usu\u00e1rio %1%. 
 Success_PasswordReset=A senha para %1% foi definida com \u00eaxito.
 Success_PasswordSend=Sua nova senha foi enviada para %1%. Feche esta janela e efetue login usando a nova senha.
 Success_ResponsesMeetRules=Suas respostas cumprem os requisitos. Clique em Gravar Respostas quando estiver pronto.
