--- a/server/src/main/resources/password/pwm/i18n/Message_sv.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_sv.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=G\u00e4stkontot har skapats. G\u00e4stanv\u00e4ndaren f\u00e
 Success_CreateUser=Ditt nya anv\u00e4ndarkonto har skapats.
 Success_NewUserForm=Ditt konto \u00e4r klart att skapas. Forts\u00e4tt n\u00e4r du \u00e4r klar.
 Success_PasswordChange=L\u00f6senordet har \u00e4ndrats.
-Success_ChangedHelpdeskPassword=L\u00f6senordet har \u00e4ndrats f\u00f6r anv\u00e4ndaren 
+Success_ChangedHelpdeskPassword=L\u00f6senordet har \u00e4ndrats f\u00f6r anv\u00e4ndaren %1%. 
 Success_PasswordReset=L\u00f6senordet f\u00f6r %1% har angetts.
 Success_PasswordSend=Ditt nya l\u00f6senord har skickats till %1%. St\u00e4ng det h\u00e4r f\u00f6nstret och logga in med ditt nya l\u00f6senord.
 Success_ResponsesMeetRules=Dina svar uppfyller kraven. Klicka p\u00e5 Spara svar n\u00e4r du \u00e4r klar.
