--- a/server/src/main/resources/password/pwm/i18n/Error_iw.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_iw.properties
@@ -159,8 +159,13 @@ Error_EnvironmentError=\u05e9\u05d2\u05d9\u05d0\u05d4 \u05d1\u05e1\u05d1\u05d9\u
 Error_ApplicationNotRunning=\u05e4\u05d5\u05e0\u05e7\u05e6\u05d9\u05d5\u05e0\u05dc\u05d9\u05d5\u05ea \u05d6\u05d5 \u05dc\u05d0 \u05ea\u05d4\u05d9\u05d4 \u05d6\u05de\u05d9\u05e0\u05d4 \u05e2\u05d3 \u05dc\u05d4\u05d2\u05d1\u05dc\u05ea \u05e7\u05d1\u05d9\u05e2\u05ea \u05d4\u05ea\u05e6\u05d5\u05e8\u05d4 \u05e9\u05dc \u05d4\u05d9\u05d9\u05e9\u05d5\u05dd.
 Error_EmailSendFailure=\u05e9\u05d2\u05d9\u05d0\u05d4 \u05d1\u05e2\u05ea \u05e9\u05dc\u05d9\u05d7\u05ea \u05e4\u05e8\u05d9\u05d8 \u05d4\u05d3\u05d5\u05d0\u05e8 \u05d4\u05d0\u05dc\u05e7\u05d8\u05e8\u05d5\u05e0\u05d9 %1%, \u05e9\u05d2\u05d9\u05d0\u05d4: %2%
 Error_PasswordOnlyBad=\u05d4\u05e1\u05d9\u05e1\u05de\u05d4 \u05e9\u05d2\u05d5\u05d9\u05d4.  \u05e0\u05e1\u05d4 \u05e9\u05d5\u05d1.
-
+Error_RecoverySequenceIncomplete=\u05d0\u05d9\u05e8\u05e2\u05d4 \u05d1\u05e2\u05d9\u05d4 \u05d1\u05de\u05d4\u05dc\u05da \u05d4\u05e8\u05e6\u05e3 \u05e9\u05dc \u05e1\u05d9\u05e1\u05de\u05d4 \u05e9\u05e0\u05e9\u05db\u05d7\u05d4. \u05e0\u05e1\u05d4 \u05e9\u05d5\u05d1.
+Error_FileTypeIncorrect=\u05e1\u05d5\u05d2 \u05d4\u05e7\u05d5\u05d1\u05e5 \u05e9\u05d2\u05d5\u05d9.
+Error_FileTooLarge=\u05d4\u05e7\u05d5\u05d1\u05e5 \u05d2\u05d3\u05d5\u05dc \u05de\u05d3\u05d9.
+Error_ClusterServiceError=\u05d0\u05d9\u05e8\u05e2\u05d4 \u05e9\u05d2\u05d9\u05d0\u05d4 \u05d1\u05e9\u05d9\u05e8\u05d5\u05ea \u05d4\u05d0\u05e9\u05db\u05d5\u05dc\u05d5\u05ea:  %1%.  \u05d1\u05d3\u05d5\u05e7 \u05d0\u05ea \u05e7\u05d5\u05d1\u05e6\u05d9 \u05d9\u05d5\u05de\u05df \u05d4\u05e8\u05d9\u05e9\u05d5\u05dd \u05dc\u05e7\u05d1\u05dc\u05ea \u05de\u05d9\u05d3\u05e2 \u05e0\u05d5\u05e1\u05e3.
 Error_RemoteErrorValue=\u05e9\u05d2\u05d9\u05d0\u05d4 \u05de\u05e8\u05d5\u05d7\u05e7\u05ea: %1%
+Error_WordlistImportError=\u05d0\u05d9\u05e8\u05e2\u05d4 \u05e9\u05d2\u05d9\u05d0\u05d4 \u05d1\u05e2\u05ea \u05d9\u05d9\u05d1\u05d5\u05d0 \u05e8\u05e9\u05d9\u05de\u05ea \u05d4\u05de\u05d9\u05dc\u05d9\u05dd: %1%
+Error_PwNotifyServiceError=\u05d0\u05d9\u05e8\u05e2\u05d4 \u05e9\u05d2\u05d9\u05d0\u05d4 \u05d1\u05de\u05d4\u05dc\u05da \u05d4\u05e4\u05e2\u05dc\u05ea \u05e9\u05d9\u05e8\u05d5\u05ea \u05d4\u05d5\u05d3\u05e2\u05d5\u05ea  \u05e2\u05dc \u05e1\u05d9\u05e1\u05de\u05d0\u05d5\u05ea: %1%
 
 Error_ConfigUploadSuccess=\u05d4\u05e7\u05d5\u05d1\u05e5 \u05d4\u05d5\u05e2\u05dc\u05d4 \u05d1\u05d4\u05e6\u05dc\u05d7\u05d4
 Error_ConfigUploadFailure=\u05d4\u05e2\u05dc\u05d0\u05ea \u05d4\u05e7\u05d5\u05d1\u05e5 \u05e0\u05db\u05e9\u05dc\u05d4.
