--- a/server/src/main/resources/password/pwm/i18n/Message_de.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_de.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=Das neue Gastkonto wurde erfolgreich erstellt. Wenn eine Ema
 Success_CreateUser=Das neue Benutzerkonto wurde erfolgreich erstellt.
 Success_NewUserForm=Das Konto ist bereit zur Erstellung. Fahren Sie fort, wenn Sie bereit sind.
 Success_PasswordChange=Das Passwort wurde erfolgreich ge\u00e4ndert.
-Success_ChangedHelpdeskPassword=Passwort erfolgreich ge\u00e4ndert f\u00fcr Benutzer 
+Success_ChangedHelpdeskPassword=Das Passwort f\u00fcr Benutzer %1% wurde erfolgreich ge\u00e4ndert. 
 Success_PasswordReset=Passwort f\u00fcr %1% wurde erfolgreich festgelegt.
 Success_PasswordSend=Das neue Passwort wurde an %1% gesendet. Schlie\u00dfen Sie dieses Fenster und melden Sie sich dann mit dem neuen Passwort an.
 Success_ResponsesMeetRules=Die Antworten erf\u00fcllen die Anforderungen. Klicken Sie auf 'Antworten speichern', wenn Sie bereit sind.
