--- a/server/src/main/resources/password/pwm/i18n/Message_fr_CA.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_fr_CA.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=Le nouveau compte invit\u00e9 a \u00e9t\u00e9 cr\u00e9\u00e9
 Success_CreateUser=Votre nouveau compte utilisateur a \u00e9t\u00e9 cr\u00e9\u00e9.
 Success_NewUserForm=Votre compte est pr\u00eat \u00e0 \u00eatre cr\u00e9\u00e9. Continuez lorsque vous \u00eates pr\u00eat.
 Success_PasswordChange=Le mot de passe a \u00e9t\u00e9 modifi\u00e9.
-Success_ChangedHelpdeskPassword=Le mot de passe de l'utilisateur a \u00e9t\u00e9 modifi\u00e9 
+Success_ChangedHelpdeskPassword=Le mot de passe a \u00e9t\u00e9 modifi\u00e9 avec succ\u00e8s pour l'utilisateur %1%. 
 Success_PasswordReset=Le mot de passe pour %1% a \u00e9t\u00e9 d\u00e9fini.
 Success_PasswordSend=Votre nouveau mot de passe a \u00e9t\u00e9 envoy\u00e9 \u00e0 %1%. Fermez cette fen\u00eatre et connectez-vous \u00e0 l'aide de votre nouveau mot de passe.
 Success_ResponsesMeetRules=Vos r\u00e9ponses r\u00e9pondent aux exigences. Cliquez sur Enregistrer les r\u00e9ponses lorsque vous \u00eates pr\u00eat.
