--- a/server/src/main/resources/password/pwm/i18n/Message_it.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message_it.properties
@@ -158,7 +158,7 @@ Success_CreateGuest=Creazione del nuovo account guest eseguita. Se \u00e8 stato 
 Success_CreateUser=Creazione del nuovo account utente eseguita.
 Success_NewUserForm=Account pronto per la creazione. Quando si \u00e8 pronti, continuare.
 Success_PasswordChange=Modifica della password eseguita.
-Success_ChangedHelpdeskPassword=Modifica della password utente eseguita 
+Success_ChangedHelpdeskPassword=Modifica della password eseguita correttamente per l'utente %1%. 
 Success_PasswordReset=Impostazione della password per %1% eseguita.
 Success_PasswordSend=La nuova password \u00e8 stata inviata a %1%. Chiudere questa finestra ed eseguire il login utilizzando la nuova password.
 Success_ResponsesMeetRules=Le risposte soddisfano i requisiti. Quando si \u00e8 pronti, fare clic su Salva risposte.
