fix l18n build issues

--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -20,6 +20,16 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
+# General user-facing display strings.
+#
+# Note the following keys must be present in this file only.  If localized values are present the build
+# will break due to test errors.
+#
+# Title_Application
+# Title_Application_Abbrev
+# Title_TitleBarAuthenticated
+# Title_TitleBar
+
 Button_Activate=Activate
 Button_Attributes=User Data
 Button_Agree=I Agree
@@ -296,8 +306,8 @@ Long_Title_VerificationSend=Before this user can be selected, the user's identit
 Title_AnsweredQuestions=Answered Questions
 Title_ActivateUser=Activate Account
 Title_Admin=Administration
-Title_Application=Self Service Password Reset
-Title_Application_Abbrev=SSPR
+Title_Application=Password Self Service
+Title_Application_Abbrev=PWM
 Title_Captcha=Verification
 Title_ChangePassword=Change Password
 Title_ConfirmResponses=Confirm Security Questions
@@ -337,8 +347,8 @@ Title_SetupOtpSecret=Setup Mobile App Authentication
 Title_Shortcuts=Shortcuts
 Title_Status=Status
 Title_Success=Success
-Title_TitleBarAuthenticated=@User\:ID@  Self Service Password Reset
-Title_TitleBar=Self Service Password Reset
+Title_TitleBarAuthenticated=@User:ID@  Password Self Service
+Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
 Title_UserData=My Data
