--- a/server/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
+++ b/server/src/main/resources/password/pwm/i18n/Error_zh_TW.properties
@@ -162,7 +162,7 @@ Error_PasswordOnlyBad=\u5bc6\u78bc\u4e0d\u6b63\u78ba\uff0c\u8acb\u518d\u8a66\u4e
 Error_RecoverySequenceIncomplete=\u5fd8\u8a18\u5bc6\u78bc\u5e8f\u5217\u6642\u767c\u751f\u554f\u984c\uff0c\u8acb\u518d\u8a66\u4e00\u6b21\u3002
 Error_FileTypeIncorrect=\u6a94\u6848\u985e\u578b\u4e0d\u6b63\u78ba\u3002
 Error_FileTooLarge=\u6a94\u6848\u592a\u5927\u3002
-Error_ClusterServiceError=\u53e2\u96c6\u670d\u52d9\u767c\u751f\u932f\u8aa4\uff1a%1%\u3002\u8acb\u67e5\u770b\u8a18\u9304\u6a94\u4ee5\u53d6\u5f97\u66f4\u591a\u8cc7\u8a0a\u3002
+Error_NodeServiceError=\u53e2\u96c6\u670d\u52d9\u767c\u751f\u932f\u8aa4\uff1a%1%\u3002\u8acb\u67e5\u770b\u8a18\u9304\u6a94\u4ee5\u53d6\u5f97\u66f4\u591a\u8cc7\u8a0a\u3002
 Error_RemoteErrorValue=\u9060\u7aef\u932f\u8aa4\uff1a%1%
 Error_WordlistImportError=\u8f38\u5165\u55ae\u5b57\u6e05\u55ae\u6642\u767c\u751f\u932f\u8aa4\uff1a%1%
 Error_PwNotifyServiceError=\u57f7\u884c\u5bc6\u78bc\u901a\u77e5\u670d\u52d9\u767c\u751f\u932f\u8aa4\uff1a%1%
