update ldapchai and non-alpha pw-rule handling

--- a/server/src/main/resources/password/pwm/i18n/Message.properties
+++ b/server/src/main/resources/password/pwm/i18n/Message.properties
@@ -110,6 +110,7 @@ Rule_MinimumUpperCase=Minimum Upper Case
 Rule_MaximumUpperCase=Maximum Upper Case
 Rule_MinimumLowerCase=Minimum Lower Case
 Rule_MaximumLowerCase=Maximum Lower Case
+Rule_AllowNonAlpha=Allow Non-Alpha
 Rule_AllowNumeric=Allow Numeric
 Rule_MinimumNumeric=Minimum Numeric
 Rule_MaximumNumeric=Maximum Numeric
