--- a/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
+++ b/server/src/main/resources/password/pwm/i18n/PwmSetting.properties
@@ -535,6 +535,7 @@ Setting_Description_password.policy.allowFirstCharNumeric=Enable this option to 
 Setting_Description_password.policy.allowFirstCharSpecial=Enable this option to allow the first character of the password to be a special character.  Applies only if the password policy allows special characters.
 Setting_Description_password.policy.allowLastCharNumeric=Enable this option to allow the last character of the password to be numeric.  Applies only if the password policy allows numeric characters.
 Setting_Description_password.policy.allowLastCharSpecial=Enable this option to allow the last character of the password to be a special character.  Applies only if the password policy allows special characters.
+Setting_Description_password.policy.allowNonAlpha=Enable this option to allow non-alphabetic characters in the password.
 Setting_Description_password.policy.allowNumeric=Enable this option to allow numeric characters in the password.
 Setting_Description_password.policy.allowSpecial=Enable this option to allow special (non alpha-numeric) characters in the password.
 Setting_Description_password.policy.caseSensitivity=Enable this option to control if the password is case sensitive.  In most cases, @PwmAppName@ can read this from the directory, but in some cases, the system cannot correctly read this value, so you can override it here.
@@ -1054,6 +1055,7 @@ Setting_Label_password.policy.allowFirstCharNumeric=Allow First Character Numeri
 Setting_Label_password.policy.allowFirstCharSpecial=Allow First Character Special
 Setting_Label_password.policy.allowLastCharNumeric=Allow Last Character Numeric
 Setting_Label_password.policy.allowLastCharSpecial=Allow Last Character Special
+Setting_Label_password.policy.allowNonAlpha=Allow Non-Alphabetic Characters
 Setting_Label_password.policy.allowNumeric=Allow Numeric Characters
 Setting_Label_password.policy.allowSpecial=Allow Special Characters
 Setting_Label_password.policy.caseSensitivity=Password is Case Sensitive
