--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -219,6 +219,7 @@ Display_UserEventHistory=This page shows your password event history. Only actio
 Display_TypingWait=Waiting for typing to complete....
 Display_EmailPrefix=Email -
 Display_SmsPrefix=SMS -
+Display_SearchAttrsUnique=Search attributes must be unique
 Field_AccountEnabled=Account Enabled
 Field_AccountExpired=Account Expired
 Field_AccountExpirationTime=Account Expiration Time
@@ -363,6 +364,7 @@ Title_Organization=Organization
 Title_Print=Print
 Title_ExportOrgChart=Export Organizational Chart
 Title_EmailOrgChart=Email Team Members
+Title_AdvancedSearch=Advanced Search
 Tooltip_PasswordStrength=The password strength meter shows how easy it is to guess your password. Try the following to make your password stronger\:<ul><li>Make the password longer</li><li>Do not repeat letters or numbers</li><li>Use mixed (upper and lower) case letters</li><li>Add more numbers</li><li>Add more symbol characters</li></ul>
 Confirm_DeleteUser=Are you sure you wish to proceed?  If you continue, the selected user will be deleted permanently.  This can not be undone.
 Confirm=Are you sure you wish to proceed?
