--- a/server/src/main/resources/password/pwm/i18n/Display.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display.properties
@@ -217,6 +217,7 @@ Display_UpdateProfile=Please update the following information\:
 Display_UpdateProfileConfirm=Please review the following information you have entered and confirm.
 Display_UpdateProfileEnterCode=To verify your email address, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
 Display_UpdateProfileEnterCodeSMS=To verify your phone number, a code has been sent to you at <b>%1%</b>.  Please enter the code here to continue.
+Display_Uploading=Uploading...
 Display_UserEventHistory=This page shows your password event history. Only actions performed with this application are shown here. All times listed are in the %1% timezone.
 Display_TypingWait=Waiting for typing to complete....
 Display_EmailPrefix=Email -
@@ -354,6 +355,7 @@ Title_TitleBarAuthenticated=@User:ID@  Password Self Service
 Title_TitleBar=Password Self Service
 Title_UpdateProfile=Update Profile
 Title_UpdateProfileConfirm=Confirm Profile Data
+Title_UploadPhoto=Upload Photo
 Title_UserData=My Data
 Title_UserEventHistory=Password History
 Title_UserInformation=My Account
@@ -385,3 +387,4 @@ Label_ExportLevelDepth=Export Level Depth
 Label_EmailLevelDepth=Team Level Depth
 Label_EmailTeamMembersFound=Email Addresses Found
 Label_StartingFrom=starting from {{personName}}
+Notice_UploadFailure=The upload has failed.  Please try again or ask an administrator for assistance.
