--- a/server/src/main/resources/password/pwm/i18n/Display_ca.properties
+++ b/server/src/main/resources/password/pwm/i18n/Display_ca.properties
@@ -66,6 +66,7 @@ Button_OK=D'acord
 Button_SendEmail=Envia un correu electr\u00f2nic
 Button_Export=Exporta
 Button_ExportOrgChart=Exporta l'organigrama
+Button_EmailTeam=Envia un correu electr\u00f2nic als membres de l'equip
 Button_TokenVerification=Verificaci\u00f3 de testimonis
 Button_SendToken=Envia el testimoni
 Display_ActivateUser=Per tal de confirmar la seva identitat, introdueixi la informaci\u00f3 seg\u00fcent. La informaci\u00f3 s'utilitzar\u00e0 per localitzar i activar el seu compte d'usuari.<p/>Asseguri's de finalitzar el proc\u00e9s o el compte no s'activar\u00e0 correctament.
@@ -149,7 +150,7 @@ Display_RecoverTokenSendChoices=Per verificar la seva identitat, se li enviar\u0
 Display_RecoverTokenSendOneChoice=Per verificar la seva identitat, enviarem un codi de seguretat a %1%.
 Display_RecoverTokenSendChoiceEmail=Enviar el codi al seu correu electr\u00f2nic registrat.
 Display_RecoverTokenSendChoiceSMS=Enviar el codi al seu tel\u00e8fon m\u00f2bil amb un missatge de text (SMS).
-Display_RecoverTokenSuccess=Gr\u00e0cies!  El codi de seguretat enviat a <b>%1%</b> s'ha verificat.
+Display_RecoverTokenSuccess=Gr\u00e0cies\!  El codi de seguretat enviat a <b>%1%</b> s'ha verificat.
 Display_RecoverChoiceReset=Establir una contrasenya nova. Si ha oblidat la contrasenya i vol establir-ne una de nova, cliqui aqu\u00ed. El seu compte tamb\u00e9 es desbloquejar\u00e0 quan estableixi una contrasenya nova.
 Display_RecoverChoiceResetInhibit=Ara mateix no pot canviar la seva contrasenya perqu\u00e8 \u00e9s dins del l\u00edmit de durada de contrasenya m\u00ednima.
 Display_RecoverChoiceUnlock=Desbloquejar el compte. Si recorda la contrasenya, pot desbloquejar el compte seleccionant aquesta opci\u00f3. No es canviar\u00e0 la contrasenya.
@@ -360,7 +361,7 @@ Value_Default=Per defecte
 Value_ProgressComplete=Completa
 Value_ProgressInProgress=En curs
 Placeholder_Search=Cerca
-Instructions_ExportOrgChart1=Cliqui el bot\u00f3 Exporta per iniciar la desc\u00e0rrega de les dades de l'organigrama. Quan la desc\u00e0rrega hagi finalitzat, podr\u00e0 importar les dades a programes com el Visio per aplicar-hi el format que prefereixi.
+Instructions_ExportOrgChart1=Faci clic al bot\u00f3 Exporta per iniciar la desc\u00e0rrega de les dades de l'organigrama. Despr\u00e9s de la desc\u00e0rrega, podr\u00e0 fer servir les dades per importar les dades d'aquest organigrama al programa que tri\u00ef. Les dades s'exportaran en format CSV.
 Instructions_ExportOrgChart2=Tri\u00ef la profunditat d'exportaci\u00f3 i premi el bot\u00f3 Exporta a continuaci\u00f3.
 Instructions_EmailTeam1=La llista de correu electr\u00f2nic es genera a partir de les dades de l'organitzaci\u00f3 des d'aquest punt. En clicar el bot\u00f3 Envia per correu electr\u00f2nic, el seu programa de correu electr\u00f2nic per defecte s'hauria d'obrir autom\u00e0ticament i mostrar la llista d'adreces de correu electr\u00f2nic ja emplenada.
 Instructions_EmailTeam2=Tri\u00ef la profunditat de l'equip i premi el bot\u00f3 Envia per correu electr\u00f2nic a continuaci\u00f3.
